--- a/status.html
+++ b/status.html
@@ -29,10 +29,39 @@
     }
 
     @keyframes neonText {
-      from { text-shadow: 0 0 10px cyan; }
-      to { text-shadow: 0 0 20px white, 0 0 30px cyan; }
+      from {
+        text-shadow: 0 0 10px cyan;
+      }
+      to {
+        text-shadow: 0 0 20px white, 0 0 30px cyan;
+      }
     }
 
+    .section {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-bottom: 60px;
+    }
+
+    .box {
+      width: 360px;
+      min-height: 180px;
+      background: rgba(0,0,0,0.6);
+      border: 3px solid cyan;
+      border-radius: 20px;
+      padding: 30px;
+      text-align: center;
+      box-shadow: 0 0 10px cyan;
+    }
+
+    .box h2 {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+
+    /* Quick Match Section */
     .server-container {
       display: flex;
       gap: 30px;
@@ -61,17 +90,17 @@
     }
 
     .wifi-icon {
-      width: 90px;
-      height: 90px;
+      width: 80px;
+      height: 80px;
       position: absolute;
-      top: -45px;
+      top: -40px;
       left: 50%;
       transform: translateX(-50%);
       background-color: #121212;
-      padding: 10px;
+      padding: 5px;
       border-radius: 50%;
-      border: 3px solid red;
-      box-shadow: 0 0 15px red;
+      border: 2px solid red;
+      box-shadow: 0 0 10px red;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -79,14 +108,14 @@
     }
 
     .wifi-icon img {
-      width: 48px;
-      height: 48px;
+      width: 45px;
+      height: 45px;
       transition: transform 0.4s ease;
     }
 
     .connecting {
       border-color: #00ff66 !important;
-      box-shadow: 0 0 20px #00ff66 !important;
+      box-shadow: 0 0 15px #00ff66 !important;
       animation: spin 1.2s linear infinite;
     }
 
@@ -101,7 +130,7 @@
 
     .server-box h2 {
       font-size: 24px;
-      margin-top: 60px;
+      margin-top: 40px;
       transition: color 0.3s ease;
     }
 
@@ -137,12 +166,7 @@
       border-radius: 10px;
       color: white;
       cursor: pointer;
-      transition: background 0.3s;
       animation: neonText 1.5s ease-in-out infinite alternate;
-    }
-
-    .connect-btn:hover {
-      background-color: #1976d2;
     }
 
     .message-box {
@@ -155,8 +179,22 @@
 </head>
 <body>
 
-  <h1 class="title">🎮 Quick Match - Counter Strike</h1>
+  <!-- بخش جداگانه میانی -->
+  <div class="section">
+    <div class="box">
+      <h2>کلیک کنید</h2>
+      <p>برای ورود به سیستم کلیک کنید</p>
+    </div>
+    <div class="box">
+      <h2>کلیک کنید</h2>
+      <p>برای ادامه وارد شوید</p>
+    </div>
+  </div>
 
+  <!-- عنوان کوییک مچ -->
+  <h1 class="title">Quick Match - Counter Strike</h1>
+
+  <!-- سرورها -->
   <div class="server-container">
     <div class="server-box">
       <div class="wifi-icon" id="wifiIcon1">
